--- a/estilo/style.css
+++ b/estilo/style.css
@@ -71,6 +71,9 @@ footer>p{
     color: white;
     padding: 5px;
 }
+footer a{
+    text-decoration: none;
+}
 footer a:visited{
     color: rgb(255, 255, 255);
 }
