--- a/estilo/style.css
+++ b/estilo/style.css
@@ -86,7 +86,7 @@ img {
     display: block;
     text-align: left;
     height: 120px;
-    width: 120;
+    width: 120px;
 }
 p{
     margin: auto;
